--- a/one7homeWar/src/main/resources/database.properties
+++ b/one7homeWar/src/main/resources/database.properties
@@ -10,9 +10,9 @@
 #db.driverClass=com.mysql.jdbc.Driver
 #hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 
-db.jdbcUrl=jdbc:mysql://45.113.136.146:3306/rainiers_onesevenhome?autoReconnect=true&useUnicode=true&characterEncoding=UTF-8
-db.user=spuser
-db.password=vujy2a6as
+db.jdbcUrl=jdbc:mysql://103.92.235.45:3306/rainiers_shoppizer?autoReconnect=true&useUnicode=true&characterEncoding=UTF-8
+db.user=rainier
+db.password=rainierpwd
 db.driverClass=com.mysql.jdbc.Driver
 hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 
@@ -26,8 +26,10 @@ hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 
 
 db.preferredTestQuery=SELECT 1
-db.schema=rainiers_onesevenhome
-hibernate.hbm2ddl.auto=update
+db.schema=rainiers_shoppizer
+#db.schema=SALESMANAGER
+#hibernate.hbm2ddl.auto=create,update
+hibernate.hbm2ddl.auto=validate
 
 ##
 ## configuration pooling base de données
