Vender Certificate Upload and Activation Link merging

--- a/one7homeWar/src/main/resources/bundles/shopizer.properties
+++ b/one7homeWar/src/main/resources/bundles/shopizer.properties
@@ -595,10 +595,17 @@ email.username.label=Username : {0}
 email.password.label=Password : {0}
 email.administration.url=Administration url : {0}
 
+success.newuser.msg=Customer registration is success
+failure.customer.activation.link=Customer registration not allowed without activation link
+failure.vendor.activation.link=Vendor registration not allowed without activation link
+failure.invalid.user=User not available
 email.newuser.title=New user created
 email.newstore.title=New store created
 email.newstore.text=A new store has been created
 email.newuser.text=A new user has been created
+email.newuser.text.activation=Activate your OneSevenHome account
+email.newuser.text.activation.link=Please click the below activation URL to activate your account,<br /> {0}
+email.newuser.text.activation.link.text=Please click the below activation URL to activate your account,
 email.newstore.name=Store name : {0}
 email.newstore.info=User informations will be sent on a separate email.
 
