--- a/one7homeWar/src/main/resources/database.properties
+++ b/one7homeWar/src/main/resources/database.properties
@@ -28,8 +28,8 @@ hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 db.preferredTestQuery=SELECT 1
 db.schema=rainiers_shoppizer
 #db.schema=SALESMANAGER
-#hibernate.hbm2ddl.auto=create,update
-hibernate.hbm2ddl.auto=validate
+hibernate.hbm2ddl.auto=create,update
+#hibernate.hbm2ddl.auto=validate
 
 ##
 ## configuration pooling base de données
