accuator memory analyzer pom

--- a/one7homeWar/pom.xml
+++ b/one7homeWar/pom.xml
@@ -98,7 +98,12 @@
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
 		</dependency>	
-
+		
+		<!-- Memory analyzer tool  -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
 
 		<!--<dependency>
 		    <groupId>javax.validation</groupId>
