shiva code merging

--- a/core/src/main/resources/email.properties
+++ b/core/src/main/resources/email.properties
@@ -1,9 +1,9 @@
 #GMail sample configuration
 #May require a keystore for certificates
-mailSender.protocol=smtps
+mailSender.protocol=smtp
 mailSender.host=smtp.gmail.com
-mailSender.port=465
-mailSender.username=youremail@gmail.com
-mailSender.password=yourpassword
+mailSender.port=587
+mailSender.username=sm19811130@gmail.com
+mailSender.password=pranav1234
 mailSender.mail.smtp.auth=true
 mail.smtp.starttls.enable=true
