--- a/one7homeWar/src/main/resources/bundles/shopizer.properties
+++ b/one7homeWar/src/main/resources/bundles/shopizer.properties
@@ -604,6 +604,9 @@ email.newstore.title=New store created
 email.newstore.text=A new store has been created
 email.newuser.text=A new user has been created
 email.newuser.text.activation=Activate your OneSevenHome account
+email.user.text.forgotpwd=Reset your OneSevenHome account password
+email.user.text.forgotpwd.confirmation=Password change confirmation for your OneSevenHome account
+email.user.text.forgotpwd.link=Please click the below URL to reset your account password,<br /> {0}
 email.newuser.text.activation.link=Please click the below activation URL to activate your account,<br /> {0}
 email.newuser.text.activation.link.text=Please click the below activation URL to activate your account,
 email.newstore.name=Store name : {0}
