--- a/one7homeWar/src/main/resources/database.properties
+++ b/one7homeWar/src/main/resources/database.properties
@@ -31,7 +31,7 @@ hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 db.preferredTestQuery=SELECT 1
 db.schema=rainiers_shoppizer
 #db.schema=SALESMANAGER
-hibernate.hbm2ddl.auto=create,update
+hibernate.hbm2ddl.auto=update
 #hibernate.hbm2ddl.auto=validate
 
 ##
