--- a/one7homeWar/src/main/resources/bundles/shopizer.properties
+++ b/one7homeWar/src/main/resources/bundles/shopizer.properties
@@ -648,6 +648,8 @@ email.greeting=Hi {0},
 email.customer.greeting=Thanks for joining {0}, you will be able to get access to the customer section by clicking on the following link {1}. Log on to the system and navigate to your order details. Informations to log in are included in this email. If you are having any difficulty with acceding to the customer section please send an email to {2}.
 email.order.statustext=An update on the status has been made on order {0} ordered on {1}
 email.order.status=Updated on {0} - Last order status {1}
+email.vendor.addproducts.text=A request has been made by Vendor {0}to add products to his list. Please verify and approve.
+email.vendor.addproducts.text.subject=Request to add products by vendor
 
 
 # General Form
