upated db properties with server properties

--- a/one7homeWar/src/main/resources/database.properties
+++ b/one7homeWar/src/main/resources/database.properties
@@ -11,7 +11,7 @@
 #hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 
 # For Server deployment
-db.jdbcUrl=jdbc:mysql://localhost:3306/rainiers_shoppizer?autoReconnect=true&useUnicode=true&characterEncoding=UTF-8
+db.jdbcUrl=jdbc:mysql://103.92.235.45:3306/rainiers_shoppizer?autoReconnect=true&useUnicode=true&characterEncoding=UTF-8
 # For ram local 
 #db.jdbcUrl=jdbc:mysql://103.92.235.45:3306/rainiers_shoppizer?autoReconnect=true&useUnicode=true&characterEncoding=UTF-8
 db.user=rainier
