--- a/one7homeWar/src/main/resources/database.properties
+++ b/one7homeWar/src/main/resources/database.properties
@@ -17,6 +17,12 @@ db.password=rainierpwd
 db.driverClass=com.mysql.jdbc.Driver
 hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 
+#OSH Product Server URLs
+#db.jdbcUrl=jdbc:mysql://103.211.219.128:3306/oshdb?autoReconnect=true&useUnicode=true&characterEncoding=UTF-8
+#db.user=oshuser
+#db.password=osh#!@56
+#db.driverClass=com.mysql.jdbc.Driver
+#hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 
 #H2
 #db.jdbcUrl=jdbc\:h2\:file\:./SALESMANAGER;AUTOCOMMIT=OFF;;mv_store=false;INIT\=CREATE SCHEMA IF NOT EXISTS SALESMANAGER
@@ -27,8 +33,8 @@ hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 
 
 db.preferredTestQuery=SELECT 1
+#db.schema=oshuser	// Production Version
 db.schema=rainiers_shoppizer
-#db.schema=SALESMANAGER
 hibernate.hbm2ddl.auto=update
 #hibernate.hbm2ddl.auto=validate
 
