all Orders by Customer fix

--- a/one7homeWar/src/main/resources/database.properties
+++ b/one7homeWar/src/main/resources/database.properties
@@ -33,7 +33,8 @@ hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 
 
 db.preferredTestQuery=SELECT 1
-#db.schema=oshuser	// Production Version
+// Production Version
+#db.schema=oshdb
 db.schema=rainiers_shoppizer
 hibernate.hbm2ddl.auto=update
 #hibernate.hbm2ddl.auto=validate
