cleaned up sample data from code language countries zones catagires products

--- a/one7homeWar/src/main/resources/database.properties
+++ b/one7homeWar/src/main/resources/database.properties
@@ -4,13 +4,8 @@
 
 
 #MYSQL
-#db.jdbcUrl=jdbc:mysql://localhost:3306/SALESMANAGER?autoReconnect=true&useUnicode=true&characterEncoding=UTF-8
-#db.user=ram
-#db.password=chinni
-#db.driverClass=com.mysql.jdbc.Driver
-#hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 
-# For Server deployment
+# For Dev Server deployment
 db.jdbcUrl=jdbc:mysql://103.92.235.45:3306/rainiers_shoppizer?autoReconnect=true&useUnicode=true&characterEncoding=UTF-8
 db.user=rainier
 db.password=rainierpwd
