log4j config fixes

--- a/one7homeWar/src/main/resources/log4j.properties
+++ b/one7homeWar/src/main/resources/log4j.properties
@@ -7,7 +7,8 @@ log4j.rootLogger=INFO,Stdout,debugLogfile
 
 log4j.logger.com.salesmanager.web.shop=INFO, debugLogfile
 log4j.appender.debugLogfile=org.apache.log4j.RollingFileAppender
-log4j.appender.debugLogfile.File=shopizer-debug.log
+#log4j.appender.debugLogfile.File=shopizer-debug.log
+log4j.appender.debugLogfile.File=${catalina.home}/logs/onesevenhome-debug.log
 #log4j.appender.debugLogfile.Threshold=ALL
 log4j.appender.debugLogfile.MaxFileSize=100MB
 #log4j.appender.debugLogfile.MaxBackupIndex=4
