--- a/core/src/main/resources/configs.properties
+++ b/core/src/main/resources/configs.properties
@@ -14,3 +14,9 @@ elasticsearch.server.proxy.password=
 # Infinispan Configuration
 infinispan.cache.location=./infinispan
 
+ccav.accessCode=AVHD01EJ26AZ97DHZA
+ccav.workingKey=3851071924D585DD8AE59B9C17489B26
+ccav.merchantID=150486
+ccav.currency=INR
+ccav.redirect_url=http://localhost:8080/order/cancelOrder/
+ccav.cancel_url=http://localhost:8080/order/cancelOrder/
