jar path changed

--- a/one7homeWar/pom.xml
+++ b/one7homeWar/pom.xml
@@ -177,7 +177,7 @@ install CCAvenu jar in maven path, put the ccavenue jar in f drive and excute th
 fallowing mvn command.
 
 
-mvn install:install-file -Dfile="F:\ccavutil.jar" 
+mvn install:install-file -Dfile="./one7homeWar/files/ccavutil.jar" 
 -DgroupId=com.ccavenue.security 
 -DartifactId=ccavenue 
 -Dversion=1.0 -Dpackaging=jar
