--- a/one7homeWar/src/main/resources/log4j.properties
+++ b/one7homeWar/src/main/resources/log4j.properties
@@ -1,16 +1,34 @@
-log4j.appender.Stdout=org.apache.log4j.ConsoleAppender
-log4j.appender.Stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.Stdout.layout.ConversionPattern=[%d{ISO8601}] %-5p - %-26.26c{1} - %m\n
+#log4j.appender.Stdout=org.apache.log4j.ConsoleAppender
+#log4j.appender.Stdout.layout=org.apache.log4j.PatternLayout
+#log4j.appender.Stdout.layout.ConversionPattern=[%d{ISO8601}] %-5p - %-26.26c{1} - %m\n
 
-log4j.rootLogger=INFO,Stdout,debugLogfile
+#log4j.rootLogger=INFO,Stdout,debugLogfile
 
 
-log4j.logger.com.salesmanager.web.shop=INFO, debugLogfile
-log4j.appender.debugLogfile=org.apache.log4j.RollingFileAppender
+#log4j.logger.com.salesmanager.web.shop=INFO, debugLogfile
+#log4j.appender.debugLogfile=org.apache.log4j.RollingFileAppender
 #log4j.appender.debugLogfile.File=shopizer-debug.log
-log4j.appender.debugLogfile.File=${catalina.home}/logs/onesevenhome-debug.log
+#log4j.appender.debugLogfile.File=${catalina.home}/logs/onesevenhome-debug.log
 #log4j.appender.debugLogfile.Threshold=ALL
-log4j.appender.debugLogfile.MaxFileSize=100MB
+#log4j.appender.debugLogfile.MaxFileSize=100MB
 #log4j.appender.debugLogfile.MaxBackupIndex=4
-log4j.appender.debugLogfile.layout=org.apache.log4j.PatternLayout
-log4j.appender.debugLogfile.layout.ConversionPattern=%d %-4r [%t] %-5p %c %x - %m%n
+#log4j.appender.debugLogfile.layout=org.apache.log4j.PatternLayout
+#log4j.appender.debugLogfile.layout.ConversionPattern=%d %-4r [%t] %-5p %c %x - %m%n
+
+
+# Root logger option
+log4j.rootLogger=INFO, file, stdout
+	 
+# Direct log messages to stdout
+log4j.appender.stdout=org.apache.log4j.ConsoleAppender
+log4j.appender.stdout.Target=System.out
+log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
+log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} [%t] %-5p:: %m%n
+
+# Direct log messages to a log file
+log4j.appender.file=org.apache.log4j.RollingFileAppender 
+log4j.appender.file.File=${catalina.home}/logs/onesevenhome-debug.log
+log4j.appender.file.MaxFileSize=10000KB
+log4j.appender.file.MaxBackupIndex=10
+log4j.appender.file.layout=org.apache.log4j.PatternLayout
+log4j.appender.file.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} [%t] %-5p:: %m%n
