--- a/core/src/main/resources/configs.properties
+++ b/core/src/main/resources/configs.properties
@@ -18,5 +18,5 @@ ccav.accessCode=AVHD01EJ26AZ97DHZA
 ccav.workingKey=3851071924D585DD8AE59B9C17489B26
 ccav.merchantID=150486
 ccav.currency=INR
-ccav.redirect_url=http://localhost:8080/order/cancelOrder/
-ccav.cancel_url=http://localhost:8080/order/cancelOrder/
+ccav.redirect_url=http://onesevenhome.com:8080/shop/order/completeOrder
+ccav.cancel_url=http://onesevenhome.com:8080/shop/order/completeOrder
