--- a/one7homeWar/src/main/resources/application.properties
+++ b/one7homeWar/src/main/resources/application.properties
@@ -1,5 +1,16 @@
-logging.level.org.springframework.web: DEBUG
-logging.level.org.springframework.security: DEBUG
+#logging.level.org.springframework.web: DEBUG
+#logging.level.org.springframework.security: DEBUG
+
+logging.level.org.springframework.web: INFO
+logging.level.root=WARN
+logging.level.org.hibernate=ERROR
+logging.level.com.salesmanager=DEBUG
+logging.pattern.console=
+
+#logging.level.org.springframework.web=ERROR
+logging.file=${catalina.home}/logs/onesevenhome.log
+#logging.file=F:\\logs\\onesevenhome.log
+
 
 #Default Spring white label error page
 server.error.whitelabel.enabled=false
