email template-registration and approve product

--- a/one7homeWar/src/main/resources/bundles/shopizer.properties
+++ b/one7homeWar/src/main/resources/bundles/shopizer.properties
@@ -650,7 +650,7 @@ email.order.statustext=An update on the status has been made on order {0} ordere
 email.order.status=Updated on {0} - Last order status {1}
 email.vendor.addproducts.text=A request has been made by Vendor {0}to add products to his list. Please verify and approve.
 email.vendor.addproducts.text.subject=Request to add products by vendor
-
+email.vendor.product.approve.status = Product approval status
 
 # General Form
 button.label.close=Close
