--- a/one7homeWar/src/main/resources/bundles/shopizer.properties
+++ b/one7homeWar/src/main/resources/bundles/shopizer.properties
@@ -651,7 +651,7 @@ email.order.status=Updated on {0} - Last order status {1}
 email.vendor.addproducts.text=A request has been made by Vendor {0}to add products to his list. Please verify and approve.
 email.vendor.addproducts.text.subject=Request to add products by vendor
 email.vendor.product.approve.status = Product approval status
-
+email.vendor.add.request.product = Product added to the catalogue
 # General Form
 button.label.close=Close
 button.label.esc=Esc key
