--- a/one7homeWar/src/main/resources/bundles/shopizer.properties
+++ b/one7homeWar/src/main/resources/bundles/shopizer.properties
@@ -653,6 +653,7 @@ email.vendor.addproducts.text.subject=Request to add products by vendor
 email.vendor.product.approve.status = Product approval status
 email.vendor.add.request.product = Product added to the catalogue
 email.vendor.request.postrequirement = Request to add new requirement
+eamil.customer.service.booking = Service Booking Confirmation
 # General Form
 button.label.close=Close
 button.label.esc=Esc key
