get user for all customer types fixed and vendor booking email template

--- a/one7homeWar/src/main/resources/bundles/shopizer.properties
+++ b/one7homeWar/src/main/resources/bundles/shopizer.properties
@@ -654,6 +654,7 @@ email.vendor.product.approve.status = Product approval status
 email.vendor.add.request.product = Product added to the catalogue
 email.vendor.request.postrequirement = Request to add new requirement
 eamil.customer.service.booking = Service Booking Confirmation
+email.customer.vendor.booking = Vendor Booking Confirmation
 # General Form
 button.label.close=Close
 button.label.esc=Esc key
