--- a/one7homeWar/src/main/resources/bundles/shopizer.properties
+++ b/one7homeWar/src/main/resources/bundles/shopizer.properties
@@ -611,6 +611,7 @@ email.newuser.text.activation.link=Please click the below activation URL to acti
 email.newuser.text.activation.link.text=Please click the below activation URL to activate your account,
 email.newstore.name=Store name : {0}
 email.newstore.info=User informations will be sent on a separate email.
+email.external.user.updates=Request for Updates
 
 email.order.title={0} - Order confirmation: {1}
 email.order.confirmation=Order confirmation: {0}
@@ -654,7 +655,10 @@ email.vendor.product.approve.status = Product approval status
 email.vendor.add.request.product = Product added to the catalogue
 email.vendor.request.postrequirement = Request to add new requirement
 eamil.customer.service.booking = Service Booking Confirmation
+email.customer.service.booking.status = Service Booking Status
 email.customer.vendor.booking = Vendor Booking Confirmation
+#email.url.link = http://onesevenhome.com/img/
+email.url.link = http://rainiersoft.com/clients/onesevenhome/img/
 # General Form
 button.label.close=Close
 button.label.esc=Esc key
