create war file without shanpshot extention

--- a/one7homeWar/pom.xml
+++ b/one7homeWar/pom.xml
@@ -193,5 +193,15 @@ this dependency already added in this pom.xl file
 
  -->
 
+	<build>
+	  <finalName>shop</finalName>
+		<plugins>
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+		</plugins>
+	</build>
+
 
 </project>
