--- a/one7homeWar/src/main/resources/database.properties
+++ b/one7homeWar/src/main/resources/database.properties
@@ -6,9 +6,9 @@
 #MYSQL
 
 # For Dev Server deployment
-db.jdbcUrl=jdbc:mysql://103.92.235.45:3306/rainiers_shoppizer?autoReconnect=true&useUnicode=true&characterEncoding=UTF-8
-db.user=rainier
-db.password=rainierpwd
+db.jdbcUrl=jdbc:mysql://216.10.251.139:3306/oshdb?autoReconnect=true&useUnicode=true&characterEncoding=UTF-8
+db.user=oshuser
+db.password=osh#!@56
 db.driverClass=com.mysql.jdbc.Driver
 hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 
@@ -30,7 +30,7 @@ hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 db.preferredTestQuery=SELECT 1
 // Production Version
 #db.schema=oshdb
-db.schema=rainiers_shoppizer
+db.schema=oshdb
 hibernate.hbm2ddl.auto=update
 #hibernate.hbm2ddl.auto=validate
 
