--- a/core/src/main/resources/email.properties
+++ b/core/src/main/resources/email.properties
@@ -1,9 +1,18 @@
 #GMail sample configuration
 #May require a keystore for certificates
+#mailSender.protocol=smtp
+#mailSender.host=smtp.gmail.com
+#mailSender.port=587
+#mailSender.username=sm19811130@gmail.com
+#mailSender.password=pranav1234
+#mailSender.mail.smtp.auth=true
+#mail.smtp.starttls.enable=true
+
+#May require a keystore for certificates
 mailSender.protocol=smtp
-mailSender.host=smtp.gmail.com
+mailSender.host=mail.onesevenhome.com
 mailSender.port=587
-mailSender.username=sm19811130@gmail.com
-mailSender.password=pranav1234
+mailSender.username=info@onesevenhome.com
+mailSender.password=Info@osh
 mailSender.mail.smtp.auth=true
 mail.smtp.starttls.enable=true
