--- a/pom.xml
+++ b/pom.xml
@@ -115,19 +115,25 @@
 			<artifactId>elasticsearch</artifactId>
 			<version>${org.elasticsearch-version}</version>
 		</dependency>	
-		
-		<!-- https://mvnrepository.com/artifact/javax.mail/javax.mail-api -->
+	   
+	   <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+            <version>1.5.19.RELEASE</version>
+        </dependency>
+	
+		<!-- https://mvnrepository.com/artifact/javax.mail/javax.mail-api 
 		<dependency>
 		    <groupId>javax.mail</groupId>
 		    <artifactId>javax.mail-api</artifactId>
-		</dependency>
+		</dependency>-->
 		
 		<!-- https://mvnrepository.com/artifact/javax.mail/mail -->
-		<dependency>
+		<!--<dependency>
 		    <groupId>javax.mail</groupId>
 		    <artifactId>mail</artifactId>
 		    <version>1.4.7</version>
-		</dependency>
+		</dependency>	-->
 		
 		<!-- http://mvnrepository.com/artifact/com.googlecode.json-simple/json-simple -->
 		<dependency>
